--- a/modules/ROOT/pages/7.0.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.0.1-release-notes.adoc
@@ -60,6 +60,13 @@ For information on the **<Open source plugin name>** plugin, see xref:<plugincod
 
 The following premium plugin updates were released alongside {productname} {release-version}.
 
+==== Text inside code editor was not properly rendered when using a dark {productname} skin.
+// #TINY-10784
+
+With the release of {productname} 7.0, a bug was introduced when using the Enhanced Code Editor with a dark skin, such as `oxide-dark`. The code editor inherited its background color from the {productname} skin, resulting in dark text on a dark background.
+
+In {productname} {release-version}, this issue has been addressed. Now, the light theme of the Enhanced Code Editor will always use a light background color, regardless of the skin being used. As a result, the light mode will render correctly and be legible when using a dark skin.
+
 === <Premium plugin name 1> <Premium plugin name 1 version>
 
 The {productname} {release-version} release includes an accompanying release of the **<Premium plugin name 1>** premium plugin.
