--- a/-new-material-templates/plugin-documentation-templates/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/-new-material-templates/plugin-documentation-templates/ROOT/partials/index-pages/premium-plugins.adoc
@@ -1,10 +1,8 @@
-// Table row for a Premium plugin.
-// Place this row into the extant table in `partials/index-pages/premium-plugins.adoc` in alphabetical order.
+// Table row for an Premium plugin.
+// Place this row into `partials/index-pages/premium-plugins.adoc` in alphabetical order by plugin name.
 
 a|
 [.lead]
 xref:<plugincode>.adoc[<Plugin name>]
 
 <One sentence plugin description.>
-
-// This file is instructional and is never included in the published name-space.
