DOC-2350: Rename changelog and index files

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -315,4 +315,4 @@
 ** xref:release-notes502.adoc[TinyMCE 5.0.2]
 ** xref:release-notes501.adoc[TinyMCE 5.0.1]
 ** xref:release-notes50.adoc[TinyMCE 5.0]
-* xref:pages-changelog.adoc[Changelog]
+* xref:changelog.adoc[Changelog]
