--- a/modules/ROOT/pages/editor-plugin-version.adoc
+++ b/modules/ROOT/pages/editor-plugin-version.adoc
@@ -18,7 +18,7 @@ This URL specifies the latest and quality assured release of {productname}.
 
 === Selecting specific version numbers
 
-NOTE: All {cloudname} channels are based on the {enterpriseversion} version. For information on the latest version of the {cloudname} `{productmajorversion}` release channel, see: xref:release-notes.adoc[{productname} Release Notes]. For a list of changes that *may* be present in the {cloudname} testing channel, see: xref:pages-changelog.adoc[{productname} Changelog].
+NOTE: All {cloudname} channels are based on the {enterpriseversion} version. For information on the latest version of the {cloudname} `{productmajorversion}` release channel, see: xref:release-notes.adoc[{productname} Release Notes]. For a list of changes that *may* be present in the {cloudname} testing channel, see: xref:changelog.adoc[{productname} Changelog].
 
 [#{productmajorversion}{productmajorversion}-testingand{productmajorversion}-devreleasechannels]
 === {productmajorversion}, {productmajorversion}-testing, and {productmajorversion}-dev release channels
