--- a/modules/ROOT/pages/integrations.adoc
+++ b/modules/ROOT/pages/integrations.adoc
@@ -9,91 +9,91 @@
 
 |
 [.lead]
-xref:integrations/angularjs.adoc[AngularJS]
+xref:angularjs.adoc[AngularJS]
 
 This directive allows you to add a TinyMCE editor to your form elements.
 
 |
 [.lead]
-xref:integrations/angular.adoc[Angular 5+]
+xref:angular.adoc[Angular 5+]
 
 Using TinyMCE together with Angular with the @tinymce/tinymce-angular component
 
 |
 [.lead]
-xref:integrations/blazor.adoc[Blazor]
+xref:blazor.adoc[Blazor]
 
 Blazor TinyMCE component.
 
 |
 [.lead]
-xref:integrations/bootstrap.adoc[Bootstrap]
+xref:bootstrap.adoc[Bootstrap]
 
 How to override the built-in block on `focusin` in Bootstrap dialogs when using TinyMCE.
 
 |
 [.lead]
-xref:integrations/django.adoc[Django]
+xref:django.adoc[Django]
 
 Django TinyMCE component.
 
 |
 [.lead]
-xref:integrations/jquery.adoc[jQuery]
+xref:jquery.adoc[jQuery]
 
 Documentation for the official TinyMCE jQuery integration.
 
 |
 [.lead]
-xref:integrations/laravel/laravel-introduction.adoc[Laravel]
+xref:laravel-introduction.adoc[Laravel]
 
 A guide to using TinyMCE with the PHP-based Laravel framework.
 
 |
 [.lead]
-xref:integrations/expressjs.adoc[Node.js + Express]
+xref:expressjs.adoc[Node.js + Express]
 
 A quick start guide on integrating TinyMCE into an Express JS Application
 
 |
 [.lead]
-xref:integrations/rails.adoc[Rails]
+xref:rails.adoc[Rails]
 
 Seamlessly integrates TinyMCE into the Rails asset pipeline.
 
 |
 [.lead]
-xref:integrations/react.adoc[React]
+xref:react.adoc[React]
 
 React TinyMCE component.
 
 |
 [.lead]
-xref:integrations/svelte.adoc[Svelte]
+xref:svelte.adoc[Svelte]
 
 Svelte TinyMCE component.
 
 |
 [.lead]
-xref:integrations/swing.adoc[Swing]
+xref:swing.adoc[Swing]
 
 Seamlessly integrates TinyMCE into Swing applications.
 
 |
 [.lead]
-xref:integrations/vue.adoc[Vue]
+xref:vue.adoc[Vue]
 
 The Official TinyMCE Vue.js component
 
 |
 [.lead]
-xref:integrations/webcomponent.adoc[Web Components]
+xref:webcomponent.adoc[Web Components]
 
 The TinyMCE Web Component integration guide
 
 |
 [.lead]
-xref:integrations/wordpress.adoc[WordPress]
+xref:wordpress.adoc[WordPress]
 
 WordPress TinyMCE component
 
