--- a/modules/ROOT/pages/plugins.adoc
+++ b/modules/ROOT/pages/plugins.adoc
@@ -10,13 +10,13 @@
 
 |
 [.lead]
-xref:plugins/premium/index.adoc[Premium plugins]
+xref:premium.adoc[Premium plugins]
 
 TinyMCE premium plugins
 
 |
 [.lead]
-xref:plugins/opensource/index.adoc[Open source plugins]
+xref:opensource.adoc[Open source plugins]
 
 TinyMCE open source plugins
 
