--- a/modules/ROOT/pages/release-notes5013.adoc
+++ b/modules/ROOT/pages/release-notes5013.adoc
@@ -32,7 +32,7 @@ For more information on the `color_map` setting, refer to the xref:content-appea
 === TinyMCE
 
 The updated TinyMCE 5.0.13 editor comes with numerous changes to the previous versions. A comprehensive list of the updates
-and fixed issues is available in the xref:pages-changelog.adoc#version5013august62019[changelog].
+and fixed issues is available in the xref:changelog.adoc#version5013august62019[changelog].
 
 ==== Accessibility improvements
 
