--- a/modules/ROOT/pages/release-notes5014.adoc
+++ b/modules/ROOT/pages/release-notes5014.adoc
@@ -39,7 +39,7 @@ PowerPaste 5.0.2 addresses two issues where pasting an external image could caus
 
 == Bug Fixes
 
-For a list of bug fixes included in this release, see: xref:pages-changelog.adoc#version5014august192019[Changelog - Version 5.0.14]
+For a list of bug fixes included in this release, see: xref:changelog.adoc#version5014august192019[Changelog - Version 5.0.14]
 
 == Known issues
 
