--- a/modules/ROOT/pages/release-notes502.adoc
+++ b/modules/ROOT/pages/release-notes502.adoc
@@ -25,4 +25,4 @@ There is also a demo provided to explore the *Checklist* capabilities xref:demo-
 
 == Updates and enhancements
 
-The new TinyMCE 5.0.2 editor comes with significant changes to the previous versions. Tiny has created a more configurable and modern editor. Improved solutions have been introduced for unnecessary and obsolete configuration options. A comprehensive list of the updates and fixed issues is available in the xref:pages-changelog.adoc#version502march52019[Changelog].
+The new TinyMCE 5.0.2 editor comes with significant changes to the previous versions. Tiny has created a more configurable and modern editor. Improved solutions have been introduced for unnecessary and obsolete configuration options. A comprehensive list of the updates and fixed issues is available in the xref:changelog.adoc#version502march52019[Changelog].
