--- a/modules/ROOT/pages/release-notes505.adoc
+++ b/modules/ROOT/pages/release-notes505.adoc
@@ -26,7 +26,7 @@ For more information on configuring the editors `language` and `directionality`,
 
 === TinyMCE
 
-The new TinyMCE 5.0.5 editor comes with significant changes to the previous versions. Improved solutions have been introduced for unnecessary and obsolete configuration options. A comprehensive list of the updates and fixed issues is available in the xref:pages-changelog.adoc#version505may92019[Changelog].
+The new TinyMCE 5.0.5 editor comes with significant changes to the previous versions. Improved solutions have been introduced for unnecessary and obsolete configuration options. A comprehensive list of the updates and fixed issues is available in the xref:changelog.adoc#version505may92019[Changelog].
 
 === Tiny Drive
 
