--- a/modules/ROOT/pages/release-notes506.adoc
+++ b/modules/ROOT/pages/release-notes506.adoc
@@ -30,7 +30,7 @@ For more information on the new API, refer to the xref:wordcount.adoc#api[docume
 
 === TinyMCE
 
-The new TinyMCE 5.0.6 editor comes with significant changes to the previous versions. Improved solutions have been introduced for unnecessary and obsolete configuration options. A comprehensive list of the updates and fixed issues is available in the xref:pages-changelog.adoc#version506may222019[changelog].
+The new TinyMCE 5.0.6 editor comes with significant changes to the previous versions. Improved solutions have been introduced for unnecessary and obsolete configuration options. A comprehensive list of the updates and fixed issues is available in the xref:changelog.adoc#version506may222019[changelog].
 
 === PowerPaste
 
