--- a/modules/ROOT/pages/release-notes507.adoc
+++ b/modules/ROOT/pages/release-notes507.adoc
@@ -58,7 +58,7 @@ For more information on *Enhanced Media Embed* refer to the full xref:mediaembed
 
 === TinyMCE
 
-The new TinyMCE 5.0.7 editor comes with significant changes to the previous versions. Improved solutions have been introduced for unnecessary and obsolete configuration options. A comprehensive list of the updates and fixed issues is available in the xref:pages-changelog.adoc#version507june52019[changelog].
+The new TinyMCE 5.0.7 editor comes with significant changes to the previous versions. Improved solutions have been introduced for unnecessary and obsolete configuration options. A comprehensive list of the updates and fixed issues is available in the xref:changelog.adoc#version507june52019[changelog].
 
 ==== Autocompleter
 
