--- a/modules/ROOT/pages/release-notes509.adoc
+++ b/modules/ROOT/pages/release-notes509.adoc
@@ -42,7 +42,7 @@ For more information on the media plugin refer to the xref:media.adoc[documentat
 
 === TinyMCE
 
-The new TinyMCE 5.0.9 editor comes with numerous changes to the previous versions. A comprehensive list of the updates and fixed issues is available in the xref:pages-changelog.adoc#version509june262019[changelog].
+The new TinyMCE 5.0.9 editor comes with numerous changes to the previous versions. A comprehensive list of the updates and fixed issues is available in the xref:changelog.adoc#version509june262019[changelog].
 
 ==== Iframe dialog component
 
