--- a/modules/ROOT/pages/advanced.adoc
+++ b/modules/ROOT/pages/advanced.adoc
@@ -9,109 +9,109 @@
 
 |
 [.lead]
-xref:advanced/accessibility.adoc[Accessibility]
+xref:advanced-accessibility.adoc[Accessibility]
 
 Learn how TinyMCE works with screen readers and how screen readers work with TinyMCE.
 
 |
 [.lead]
-xref:advanced/security.adoc[Security]
+xref:security.adoc[Security]
 
 Security information for TinyMCE.
 
 |
 [.lead]
-xref:advanced/creating-a-skin.adoc[Create a skin]
+xref:creating-a-skin.adoc[Create a skin]
 
 Introducing skin creation.
 
 |
 [.lead]
-xref:advanced/creating-an-icon-pack.adoc[Create an icon pack]
+xref:creating-an-icon-pack.adoc[Create an icon pack]
 
 Introducing icon pack creation.
 
 |
 [.lead]
-xref:advanced/creating-a-plugin.adoc[Create a plugin]
+xref:creating-a-plugin.adoc[Create a plugin]
 
 Introducing plugin creation, with an example.
 
 |
 [.lead]
-xref:advanced/annotations.adoc[Annotations]
+xref:annotations.adoc[Annotations]
 
 TinyMCE Annotations provides the ability to describe particular features or add general information to a...
 
 |
 [.lead]
-xref:advanced/yeoman-generator.adoc[Yeoman generator]
+xref:yeoman-generator.adoc[Yeoman generator]
 
 How to use the Yeoman generator to bootstrap a new TinyMCE plugin
 
 |
 [.lead]
-xref:advanced/creating-custom-notifications.adoc[Create custom notifications]
+xref:creating-custom-notifications.adoc[Create custom notifications]
 
 Learn how to make custom notifications.
 
 |
 [.lead]
-xref:advanced/php-upload-handler.adoc[PHP image upload handler]
+xref:php-upload-handler.adoc[PHP image upload handler]
 
 A server-side upload handler PHP script.
 
 |
 [.lead]
-xref:advanced/available-menu-items.adoc[Available Menu Items]
+xref:available-menu-items.adoc[Available Menu Items]
 
 Complete list of menu items available for the menu bar and context menus.
 
 |
 [.lead]
-xref:advanced/available-toolbar-buttons.adoc[Available Toolbar Buttons]
+xref:available-toolbar-buttons.adoc[Available Toolbar Buttons]
 
 Complete list of toolbar buttons available for the toolbar and quick toolbars.
 
 |
 [.lead]
-xref:advanced/editor-command-identifiers.adoc[Available Commands]
+xref:editor-command-identifiers.adoc[Available Commands]
 
 Complete list of editor commands.
 
 |
 [.lead]
-xref:advanced/editor-icon-identifiers.adoc[Available Icons]
+xref:editor-icon-identifiers.adoc[Available Icons]
 
 Complete list of icon identifiers.
 
 |
 [.lead]
-xref:advanced/editor-context-menu-identifiers.adoc[Available Context Menu Items]
+xref:editor-context-menu-identifiers.adoc[Available Context Menu Items]
 
 Complete list of available context menu sections.
 
 |
 [.lead]
-xref:advanced/events.adoc[Available Events]
+xref:advanced-events.adoc[Available Events]
 
 List of common editor events
 
 |
 [.lead]
-xref:advanced/keyboard-shortcuts.adoc[Keyboard shortcuts]
+xref:keyboard-shortcuts.adoc[Keyboard shortcuts]
 
 Complete list of keyboard shortcuts.
 
 |
 [.lead]
-xref:advanced/usage-with-module-loaders/introduction_to_bundling_tinymce.adoc[Bundling TinyMCE]
+xref:introduction_to_bundling_tinymce.adoc[Bundling TinyMCE]
 
 Bundling TinyMCE with Webpack, rollup.js, or Browserify.
 
 |
 [.lead]
-xref:advanced/generate-rsa-key-pairs.adoc[Generate public key pairs]
+xref:generate-rsa-key-pairs.adoc[Generate public key pairs]
 
 Instructions on how to generate private/public key pairs for the Tiny Cloud
 
