--- a/modules/ROOT/pages/configure.adoc
+++ b/modules/ROOT/pages/configure.adoc
@@ -11,79 +11,79 @@
 
 |
 [.lead]
-xref:configure/integration-and-setup.adoc[Integration options]
+xref:integration-and-setup.adoc[Integration options]
 
 Essential editor configuration, including `selector` and `plugins` keys.
 
 |
 [.lead]
-xref:configure/editor-appearance.adoc[User interface options]
+xref:editor-appearance.adoc[User interface options]
 
 Configure the editor's appearance, including menu and toolbar controls.
 
 |
 [.lead]
-xref:configure/content-appearance.adoc[Content appearance options]
+xref:content-appearance.adoc[Content appearance options]
 
 Configure the appearance of content inside TinyMCE's editable area.
 
 |
 [.lead]
-xref:configure/content-filtering.adoc[Content filtering options]
+xref:content-filtering.adoc[Content filtering options]
 
 Learn how to create clean, maintainable and readable content.
 
 |
 [.lead]
-xref:configure/content-formatting.adoc[Content formatting options]
+xref:content-formatting.adoc[Content formatting options]
 
 Learn how to create clean, maintainable and readable content.
 
 |
 [.lead]
-xref:configure/spelling.adoc[Spelling options]
+xref:spelling.adoc[Spelling options]
 
 TinyMCE spell checking.
 
 |
 [.lead]
-xref:configure/file-image-upload.adoc[Image & file options]
+xref:file-image-upload.adoc[Image & file options]
 
 These settings affect TinyMCE's image and file handling capabilities.
 
 |
 [.lead]
-xref:configure/accessibility.adoc[Accessibility options]
+xref:configure-accessibility.adoc[Accessibility options]
 
 Configure the accessibility of TinyMCE.
 
 |
 [.lead]
-xref:configure/localization.adoc[Localization options]
+xref:configure-localization.adoc[Localization options]
 
 Localize TinyMCE for your language, including directionality.
 
 |
 [.lead]
-xref:configure/url-handling.adoc[URL handling options]
+xref:url-handling.adoc[URL handling options]
 
 These settings affect the way URLs are handled by the editor.
 
 |
 [.lead]
-xref:configure/advanced-editing-behavior.adoc[Advanced editing options]
+xref:advanced-editing-behavior.adoc[Advanced editing options]
 
 Learn about some edge case editor behavior.
 
 |
 [.lead]
-xref:configure/contributing-to-open-source.adoc[Contribute to TinyMCE]
+xref:contributing-to-open-source.adoc[Contribute to TinyMCE]
 
 Contribute to the open source project.
 
 |
 [.lead]
-xref:configure/contributing-docs.adoc[Contribute to documentation]
+xref:contributing-docs.adoc[Contribute to documentation]
 
 Contribute to TinyMCE's developer documentation.
 
