--- a/modules/ROOT/pages/enterprise.adoc
+++ b/modules/ROOT/pages/enterprise.adoc
@@ -9,127 +9,127 @@
 
 |
 [.lead]
-xref:enterprise/tiny-comments.adoc[Commenting & collaboration]
+xref:tiny-comments.adoc[Commenting & collaboration]
 
 The Comments plugin provides the ability to add comments to the content and collaborate with other users for content editing.
 
 |
 [.lead]
-xref:enterprise/tinydrive.adoc[Cloud-based file management]
+xref:enterprise-tinydrive.adoc[Cloud-based file management]
 
 Tiny Drive - a premium plugin to manage files & images.
 
 |
 [.lead]
-xref:enterprise/moxiemanager.adoc[Self-hosted file management]
+xref:enterprise-moxiemanager.adoc[Self-hosted file management]
 
 MoxieManager is a premium plugin to manage files & images.
 
 |
 [.lead]
-xref:enterprise/premium-skins-and-icon-packs/index.adoc[Tiny Skins and Icon Packs]
+xref:premium-skins-and-icon-packs.adoc[Tiny Skins and Icon Packs]
 
 Quickly give TinyMCE a new look.
 
 |
 [.lead]
-xref:enterprise/pageembed.adoc[Page Embed]
+xref:enterprise-pageembed.adoc[Page Embed]
 
 Easily inserts iframe into the content.
 
 |
 [.lead]
-xref:enterprise/permanentpen.adoc[Permanent Pen]
+xref:enterprise-permanentpen.adoc[Permanent Pen]
 
 Apply formats while typing.
 
 |
 [.lead]
-xref:enterprise/formatpainter.adoc[Format Painter]
+xref:enterprise-formatpainter.adoc[Format Painter]
 
 Quickly apply formats to multiple pieces of text.
 
 |
 [.lead]
-xref:enterprise/checklist.adoc[Checklist]
+xref:enterprise-checklist.adoc[Checklist]
 
 Add checklists to your content.
 
 |
 [.lead]
-xref:enterprise/paste-from-word.adoc[Paste from Word]
+xref:paste-from-word.adoc[Paste from Word]
 
 PowerPaste is a premium plugin for clean Word copy-and-paste.
 
 |
 [.lead]
-xref:enterprise/check-spelling/index.adoc[Spell checking as-you-type]
+xref:check-spelling.adoc[Spell checking as-you-type]
 
 Spell Checker Pro is a premium plugin and server to check spelling as-you-type.
 
 |
 [.lead]
-xref:enterprise/casechange.adoc[Case Change]
+xref:enterprise-casechange.adoc[Case Change]
 
 Change the case of text.
 
 |
 [.lead]
-xref:enterprise/check-links.adoc[Hyperlink checking]
+xref:check-links.adoc[Hyperlink checking]
 
 Check for valid hyperlinks inside the editor
 
 |
 [.lead]
-xref:enterprise/embed-media/index.adoc[Media embedding]
+xref:embed-media.adoc[Media embedding]
 
 Add rich media previews inside TinyMCE.
 
 |
 [.lead]
-xref:enterprise/accessibility.adoc[Accessibility checking]
+xref:enterprise-accessibility.adoc[Accessibility checking]
 
 WCAG & Section 508 compliant accessibility checking.
 
 |
 [.lead]
-xref:enterprise/mentions.adoc[Mentions]
+xref:enterprise-mentions.adoc[Mentions]
 
 Mentions brings social sharing to TinyMCE.
 
 |
 [.lead]
-xref:enterprise/server/index.adoc[Server-side component installation]
+xref:server.adoc[Server-side component installation]
 
 Server-side components for premium plugins like spelling as-you-type.
 
 |
 [.lead]
-xref:enterprise/advcode.adoc[Advanced source code editing]
+xref:enterprise-advcode.adoc[Advanced source code editing]
 
 An IDE-like code editor for TinyMCE.
 
 |
 [.lead]
-xref:enterprise/advanced-tables.adoc[Advanced Tables]
+xref:advanced-tables.adoc[Advanced Tables]
 
 Add advanced functionality to tables.
 
 |
 [.lead]
-xref:enterprise/export.adoc[Export]
+xref:enterprise-export.adoc[Export]
 
 Export content from TinyMCE, into varying formats.
 
 |
 [.lead]
-xref:enterprise/support.adoc[Professional support]
+xref:support.adoc[Professional support]
 
 Find how to contact Tiny support.
 
 |
 [.lead]
-xref:enterprise/system-requirements.adoc[Supported Premium Versions]
+xref:enterprise-system-requirements.adoc[Supported Premium Versions]
 
 Supported versions and platforms for TinyMCE and TinyMCE premium features.
 
