--- a/modules/ROOT/pages/premium.adoc
+++ b/modules/ROOT/pages/premium.adoc
@@ -11,107 +11,107 @@
 
 |
 [.lead]
-xref:plugins/premium/a11ychecker.adoc[Accessibility Checker]
+xref:a11ychecker.adoc[Accessibility Checker]
 
 Checks the contents of the editor for WCAG & Section 508 accessibility problems.
 
 |
 [.lead]
-xref:plugins/premium/advcode.adoc[Advanced Code Editor]
+xref:premium-advcode.adoc[Advanced Code Editor]
 
 How to setup TinyMCE's Advanced Code Editor plugin.
 
 |
 [.lead]
-xref:plugins/premium/advtable.adoc[Advanced Tables]
+xref:advtable.adoc[Advanced Tables]
 
 Add advanced functionality to tables.
 
 |
 [.lead]
-xref:plugins/premium/casechange.adoc[Case Change]
+xref:premium-casechange.adoc[Case Change]
 
 Change the case of text.
 
 |
 [.lead]
-xref:plugins/premium/checklist.adoc[Checklist]
+xref:premium-checklist.adoc[Checklist]
 
 Add checklists to your content.
 
 |
 [.lead]
-xref:plugins/premium/comments/introduction_to_tiny_comments.adoc[Comments]
+xref:introduction_to_tiny_comments.adoc[Comments]
 
 The TinyMCE Comments plugin
 
 |
 [.lead]
-xref:plugins/premium/mediaembed.adoc[Enhanced Media Embed]
+xref:mediaembed.adoc[Enhanced Media Embed]
 
 Add rich media previews inside TinyMCE.
 
 |
 [.lead]
-xref:plugins/premium/export.adoc[Export]
+xref:premium-export.adoc[Export]
 
 Export content from TinyMCE, into various formats.
 
 |
 [.lead]
-xref:plugins/premium/formatpainter.adoc[Format Painter]
+xref:premium-formatpainter.adoc[Format Painter]
 
 Quickly apply formats to multiple pieces of text.
 
 |
 [.lead]
-xref:plugins/premium/linkchecker.adoc[Link Checker]
+xref:linkchecker.adoc[Link Checker]
 
 Validate links, as you type.
 
 |
 [.lead]
-xref:plugins/premium/mentions.adoc[Mentions]
+xref:premium-mentions.adoc[Mentions]
 
 Enables @mention functionality.
 
 |
 [.lead]
-xref:plugins/premium/moxiemanager.adoc[MoxieManager]
+xref:premium-moxiemanager.adoc[MoxieManager]
 
 File and image management plugin and service
 
 |
 [.lead]
-xref:plugins/premium/pageembed.adoc[Page Embed]
+xref:premium-pageembed.adoc[Page Embed]
 
 Easily inserts iframe into the content.
 
 |
 [.lead]
-xref:plugins/premium/permanentpen.adoc[Permanent Pen]
+xref:premium-permanentpen.adoc[Permanent Pen]
 
 Apply formats while typing.
 
 |
 [.lead]
-xref:plugins/premium/powerpaste.adoc[PowerPaste]
+xref:powerpaste.adoc[PowerPaste]
 
 |
 [.lead]
-xref:plugins/premium/tinymcespellchecker.adoc[Spell Checker Pro]
+xref:tinymcespellchecker.adoc[Spell Checker Pro]
 
 Check spelling as-you-type in TinyMCE.
 
 |
 [.lead]
-xref:plugins/premium/tinydrive.adoc[Tiny Drive]
+xref:premium-tinydrive.adoc[Tiny Drive]
 
 Cloud-based file and image management for TinyMCE.
 
 |
 [.lead]
-xref:plugins/premium/rtc.adoc[Real-time Collaboration]
+xref:rtc-plugin.adoc[Real-time Collaboration]
 
 The Real-time Collaboration plugin for TinyMCE
 
