--- a/modules/ROOT/pages/release-notes503.adoc
+++ b/modules/ROOT/pages/release-notes503.adoc
@@ -44,4 +44,4 @@ Refer to this https://github.com/tinymce/tinymce-swing-codesamples[GitHub repo] 
 
 == Updates and enhancements
 
-The new TinyMCE 5.0.3 editor comes with significant changes to the previous versions. Improved solutions have been introduced for unnecessary and obsolete configuration options. A comprehensive list of the updates and fixed issues is available in the xref:pages-changelog.adoc#version503march192019[Changelog].
+The new TinyMCE 5.0.3 editor comes with significant changes to the previous versions. Improved solutions have been introduced for unnecessary and obsolete configuration options. A comprehensive list of the updates and fixed issues is available in the xref:changelog.adoc#version503march192019[Changelog].
