--- a/modules/ROOT/pages/release-notes504.adoc
+++ b/modules/ROOT/pages/release-notes504.adoc
@@ -40,4 +40,4 @@ For more information on custom sidebar, refer to the xref:customsidebar.adoc[doc
 
 == Updates and enhancements
 
-The new TinyMCE 5.0.4 editor comes with significant changes to the previous versions. Improved solutions have been introduced for unnecessary and obsolete configuration options. A comprehensive list of the updates and fixed issues is available in the xref:pages-changelog.adoc#version504april232019[Changelog].
+The new TinyMCE 5.0.4 editor comes with significant changes to the previous versions. Improved solutions have been introduced for unnecessary and obsolete configuration options. A comprehensive list of the updates and fixed issues is available in the xref:changelog.adoc#version504april232019[Changelog].
