--- a/modules/ROOT/pages/ui-components.adoc
+++ b/modules/ROOT/pages/ui-components.adoc
@@ -10,67 +10,67 @@
 |===
 |
 [.lead]
-xref:ui-components/autocompleter.adoc[Autocompleter]
+xref:autocompleter.adoc[Autocompleter]
 
 Add a custom autocompleter to TinyMCE 5.
 
 |
 [.lead]
-xref:ui-components/contextform.adoc[Context forms]
+xref:contextform.adoc[Context forms]
 
 Context forms overview
 
 |
 [.lead]
-xref:ui-components/contextmenu.adoc[Context menu]
+xref:contextmenu.adoc[Context menu]
 
 Context menu overview
 
 |
 [.lead]
-xref:ui-components/contexttoolbar.adoc[Context toolbar]
+xref:contexttoolbar.adoc[Context toolbar]
 
 Context toolbar overview
 
 |
 [.lead]
-xref:ui-components/menuitems.adoc[Custom menu items]
+xref:menuitems.adoc[Custom menu items]
 
 This section demonstrates different types of menu items.
 
 |
 [.lead]
-xref:ui-components/customsidebar.adoc[Custom sidebar]
+xref:customsidebar.adoc[Custom sidebar]
 
 Introducing sidebar panel creation.
 
 |
 [.lead]
-xref:ui-components/dialog.adoc[Dialog]
+xref:dialog.adoc[Dialog]
 
 An overview of TinyMCE dialogs and how to create custom dialogs.
 
 |
 [.lead]
-xref:ui-components/dialogcomponents.adoc[Dialog components]
+xref:dialogcomponents.adoc[Dialog components]
 
 A reference list of all TinyMCE dialog components.
 
 |
 [.lead]
-xref:ui-components/urldialog.adoc[URL dialog]
+xref:urldialog.adoc[URL dialog]
 
 URL dialogs are a TinyMCE UI component used to display an external page.
 
 |
 [.lead]
-xref:ui-components/toolbarbuttons.adoc[Toolbar buttons]
+xref:toolbarbuttons.adoc[Toolbar buttons]
 
 Add a custom buttons to the TinyMCE 5 toolbar.
 
 |
 [.lead]
-xref:ui-components/typesoftoolbarbuttons.adoc[Types of toolbar buttons]
+xref:typesoftoolbarbuttons.adoc[Types of toolbar buttons]
 
 This section demonstrates different types of toolbar buttons.
 
