DOC-2363 7.1 Release Notes initial outline

--- a/modules/ROOT/pages/release-notes.adoc
+++ b/modules/ROOT/pages/release-notes.adoc
@@ -4,10 +4,16 @@
 
 include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
-This section lists the releases for {productname} 7 and the changes made in each release.
+This section lists the releases for {productname} {productmajorversion} and the changes made in each release.
 
 [cols="1,1"]
 |===
+
+a|
+[.lead]
+xref:7.1-release-notes.adoc#overview[{productname} 7.1]
+
+Release notes for {productname} 7.1
 
 a|
 [.lead]
